--- a/movies-stream-project/src/index.css
+++ b/movies-stream-project/src/index.css
@@ -20,7 +20,7 @@
 }
 
 
-/*LeftSideBar*/
+/****************************LeftSideBar******************/
 .Leftsidebar.img 
 {
 
@@ -29,6 +29,8 @@ align-items: center;
 }
 .Leftsidebar
 {
+  display: flex;
+  flex-direction: column;
 width: 200px;
 height: 100vh;
   background-color: #181715;
@@ -55,29 +57,70 @@ gap: 0px;
 opacity: 0px;
 
 }
-.Leftsidebar .circle-border-container {
-    padding: 10px;
-    border: 2px solid #FFA41C;
-    border-radius: 8px;
-    margin-top: 20px;
+.circle-border-container {
+  padding: 10px;
+  border: 2px solid #1d1d1d;
+  border-radius: 30px;
+  margin-top: 20px;
+  transition: all 0.5s ease;
+  overflow: hidden; /* Ensures any overflow content is hidden */
 }
 
-.Leftsidebar .circle-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+.circle-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
+
 
 .Leftsidebar .circle {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
    
     overflow: hidden;
 }
 
 
+.circle img {
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease;
+}
 
+.circle img:hover {
+  transform: scale(1.05); 
+}
+
+.plus-circle {
+  margin-top: 15px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #FFA41C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #FFA41C;
+  cursor: pointer; 
+}
+.icon-container {
+  display: flex;
+  gap: 40px;
+  margin-top: 30px;
+}
+
+.switch-icon {
+  color: #FFA41C;
+  font-size: 40px;
+}
+
+.logout-icon {
+  color: red;
+  font-size: 40px;
+}
 /*****************************************************************************************************/
 /*navbar*/
 .navbar-content {
@@ -276,4 +319,32 @@ border-radius: 10px;
   padding: 5px;
   border-radius: 5px;
   
+}
+/**************************/
+/* animation for images in home content */
+.home-content .image-container img ,
+.home-content .second-image22 img
+{
+  transition: transform 0.3s ease;
+}
+
+.home-content .image-container img:hover 
+,
+.home-content .second-image22 img:hover{
+  transform: scale(1.05); 
+}
+
+.home-content .image-container ,
+.home-content .second-image22 {
+  position: relative;
+}
+
+.overlay-content, .overlay-content-below , .second-image22{
+  transition: opacity 0.3s ease;
+}
+
+.image-container:hover .overlay-content,
+.image-container:hover .overlay-content-below 
+.image-container:hover .second-image22{
+  opacity: 1; 
 }
